--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -39,20 +39,20 @@
     <!-- PHONE NR / OPEN HOURS -->
     <div class="row mt-5">
         <div class="col-12 col-md-4 offset-md-2">
-            <h1 class="text-center"><i class="fas fa-phone"></i></h1>
-            <h1 class="text-center uppercase">Speak To Us</h1>
+            <h2 class="text-center"><i class="fas fa-phone"></i></h2>
+            <h2 class="text-center uppercase">Speak To Us</h2>
             <p class="text-center">Dont have time to wait? Call us on: (+48) 01234 567890</p>
         </div>
         <div class="col-12 col-md-4">
-            <h1 class="text-center"><i class="far fa-clock"></i></h1>
-            <h1 class="text-center uppercase">Opening Hours</h1>
+            <h2 class="text-center"><i class="far fa-clock"></i></h2>
+            <h2 class="text-center uppercase">Opening Hours</h2>
             <p class="text-center">Monday to Friday: 9.30am - 3.00pm</p>
         </div>
     </div>
     <!-- TEXT ONLY ON SM DEVICES -->
     <div class="row mt-5 d-sm-none">
         <div class="col-10 offset-1 col-md-6 offset-md-3">
-            <h1 class="text-center uppercase">We are looking forward hearing from you!</h1>
+            <h3 class="text-center uppercase">We are looking forward hearing from you!</h3>
         </div>
     </div>
 </div>
@@ -60,10 +60,10 @@
 <div class="container-fluid info-container">
     <div class="row mt-5 mx-0">
         <div class="col-12">
-            <img class="w-100 img-fluid" src="{{ MEDIA_URL }}contactskate.jpg" alt="Skateboarders">
+            <img class="img-fluid" src="{{ MEDIA_URL }}contactskate.jpg" alt="Skateboarders">
             <!-- TEXT CENTERED AT IMAGE, SHOWN FROM LANDSCAPED PHONE AND UP -->
             <div class="img-text d-none d-sm-block p-3">
-                <h1 class="text-center uppercase">We are looking forward hearing from you!</h1>
+                <h3 class="text-center uppercase">We are looking forward hearing from you!</h3>
             </div>
         </div>
     </div>
