--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,11 +3,13 @@
 
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'home/css/home.css' %}">
+<link rel="stylesheet" href="{% static 'products/css/products.css' %}">
 {% endblock %}
 
 {% block content %}
 
 <!-- HERO SECTION -->
+
 <div class="container hero-container">
     <div class="row">
         <div class="col-12 col-md-8 offset-md-2 text-center">
@@ -17,34 +19,31 @@
                 Get the latest skateboarding gear right here!
             </p>
             <div class="my-5">
-                <h4>
+                <h2>
                     <a href="{% url 'products' %}"
                         class="shop-now-button btn btn-md rounded-0 text-uppercase py-1 mb-5">Shop Now</a>
-                </h4>
+                </h2>
             </div>
         </div>
     </div>
 </div>
 <!-- CAROUSEL -->
 <div id="carouselExampleIndicators" class="container carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="{{ MEDIA_URL }}unsplash01.jpg" alt="Second slide">
+            <img class="d-block" src="{{ MEDIA_URL }}unsplash01.jpg" alt="Second slide">
             <div class="carousel-caption d-none d-md-block">
-                <h5>...</h5>
-                <p>...</p>
+
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="{{ MEDIA_URL }}unsplash02.jpg" alt="Second slide">
+            <img class="d-block" src="{{ MEDIA_URL }}unsplash02.jpg" alt="Second slide">
             <div class="carousel-caption d-none d-md-block">
-                <h5>...</h5>
-                <p>...</p>
+
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -57,81 +56,139 @@
         </a>
     </div>
 </div>
-<!-- SHOPNOW SECTION -->
-<div class="row container shopnow-container bg-shopnow pt-3 pb-3 uppercase">
-    <a href="{% url 'products' %}?category=decks" id="shopnow" class="col-6 col-sm-6 col-md-4">
-        <div id="shopnow-inner">
-            <h3><img src="https://img.icons8.com/ios/100/ffffff/skateboard-without-wheels.png" /></h3>
-        </div>
-        <div class="middle text-white">
-            <h3 class="shopnow-header">Decks</h3>
-        </div>
-    </a>
-    <a href="{% url 'products' %}?category=trucks" id="shopnow" class="col-6 col-sm-6 col-md-4">
-        <div id="shopnow-inner">
-            <h3><img src="https://img.icons8.com/ios/100/ffffff/skateboard-truck.png" /></h3>
-        </div>
-        <div class="middle text-white">
-            <h3 class="shopnow-header">Trucks</h3>
-        </div>
-    </a>
-    <a href="{% url 'products' %}?category=wheels" id="shopnow" class="col-6 col-sm-6 col-md-4">
-        <div id="shopnow-inner">
-            <h3><img src="https://img.icons8.com/ios/80/ffffff/skateboard-wheel.png" /></h3>
-        </div>
-        <div class="middle text-white">
-            <h3 class="shopnow-header">Wheels</h3>
-        </div>
-    </a>
-    <a href="{% url 'products' %}?category=bearings" id="shopnow" class="col-6 col-sm-6 col-md-4">
-        <div id="shopnow-inner">
-            <h3><img src="https://img.icons8.com/dotty/80/ffffff/final-state.png" /></h3>
-        </div>
-        <div class="middle text-white">
-            <h3 class="shopnow-header">Bearings</h3>
-        </div>
-    </a>
-    <a href="{% url 'products' %}?category=griptape" id="shopnow" class="col-6 col-sm-6 col-md-4">
-        <div id="shopnow-inner">
-            <h3><img src="https://img.icons8.com/ios-filled/100/ffffff/skateboard-grip-tape.png" /></h3>
-        </div>
-        <div class="middle text-white">
-            <h3 class="shopnow-header">Griptape</h3>
-        </div>
-    </a>
-    <a href="{% url 'products' %}?category=misc" id="shopnow" class="col-6 col-sm-6 col-md-4">
-        <div id="shopnow-inner">
-            <h3><img src="https://img.icons8.com/ios/40/ffffff/screwdriver.png" />
-                <img src="https://img.icons8.com/windows/40/ffffff/Production-order.png" class="d-none d-sm-inline" />
-                <br>
-                <img src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/40/ffffff/external-screw-industry-kiranshastry-lineal-kiranshastry.png"
-                    class="d-none d-sm-inline" />
-                <img src="https://img.icons8.com/ios/40/ffffff/open-end-wrench.png" class="d-none d-sm-inline" />
-            </h3>
-        </div>
-        <div class="middle text-white">
-            <h3 class="shopnow-header">Misc</h3>
-        </div>
-    </a>
-</div>
-<!-- TEXT ONLY ON SM DEVICES -->
-<div class="row mt-5 d-sm-none">
-    <div class="col-12 col-md-6 offset-md-3 text-center">
-        <h1 class="uppercase">HELLO, New to Skateboarding?</h1>
-        <p>Dont worry we got you covered!</p>
-    </div>
-</div>
-<!-- IMAGE -->
-<div class="container info-container">
+
+<div class="container-fluid mt-5 pt-5 mb-5 rated-container">
     <div class="row">
-        <div class="col px-1">
-            <img class="d-block w-100" src="{{ MEDIA_URL }}unsplash05.jpg" alt="Kid on skateboard">
-            <!-- TEXT CENTERED AT IMAGE, SHOWN FROM LANDSCAPED PHONE AND UP -->
-            <div class="img-text p-3 d-none d-sm-block">
-                <h1 class="uppercase">HELLO, New to Skateboarding?</h1>
-                <p>Dont worry we got you covered!</p>
+        <div class="col text-center">
+            <p class="logo-font text-center uppercase">Highly Rated Products</p>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            {% for product in products %}
+            {% if product.rating > 4.5 %}
+            <div class="col-12 col-sm-6 col-md-6 col-lg-3 rated-products">
+                <div class="card img-card h-100">
+                    {% if product.image %}
+                    <!-- IMAGES -->
+                    <div class="img-container">
+                        <a href="{% url 'product_detail' product.id %}">
+                            <img class="text-center card-img-top img-fluid" src="{{ product.image.url }}"
+                                alt="{{ product.name }}">
+                        </a>
+                    </div>
+                    {% else %}
+                    <div class="img-container">
+                        <a href="{% url 'product_detail' product.id %}">
+                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png"
+                                alt="{{ product.name }}">
+                        </a>
+                    </div>
+                    {% endif %}
+                    <!-- NAME, PRICE -->
+                    <div class="card-body pb-0">
+                        <p class="mb-0">{{ product.name }}</p>
+                        <p class="mb-0">{{ product.rating }}/ 5.00</p>
+                        <p class="mb-3">
+                            {% if product.rating == 5 %}
+                            <i class="fas fa-star mr-1"></i><i class="fas fa-star mr-1"></i> <i
+                                class="fas fa-star mr-1"></i> <i class="fas fa-star mr-1"></i> <i
+                                class="fas fa-star mr-1"></i>
+                            {% elif product.rating >= 4.5 %}
+                            <i class="fas fa-star mr-1"></i> <i class="fas fa-star mr-1"></i> <i
+                                class="fas fa-star mr-1"></i> <i class="fas fa-star mr-1"></i><i
+                                class="fas fa-star-half-alt"></i>
+                            {% endif %}
+                        </p>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+            {% endfor %}
+            <div class="text-center mb-5 mt-4">
+                <button id="btn_loadless" class="btn bt-sm rounded-0 uppercase"><i
+                    class="fas fa-chevron-up"></i></button>
+                <button id="btn_loadmore" class="btn bt-sm rounded-0 uppercase"><i
+                        class="fas fa-chevron-down"></i></button>
             </div>
         </div>
     </div>
 </div>
+
+<!-- SHOPNOW SECTION -->
+<div class="container shopnow-container mt-5 mb-5">
+    <div class="row">
+        <div class="col text-center">
+            <p class="logo-font text-center uppercase">Shop By Category</p>
+        </div>
+    </div>
+    <div class="row bg-shopnow uppercase">
+        <a href="{% url 'products' %}?category=decks" class="col-6 col-sm-6 col-md-4 shopnow">
+            <div id="shopnow-inner">
+                <h3><img src="https://img.icons8.com/ios/100/ffffff/skateboard-without-wheels.png"
+                        alt="Picture of a skate deck" /></h3>
+            </div>
+            <div class="middle text-white">
+                <h3 class="shopnow-header">Decks</h3>
+            </div>
+        </a>
+        <a href="{% url 'products' %}?category=trucks" class="col-6 col-sm-6 col-md-4 shopnow">
+            <div id="shopnow-inner">
+                <h3><img src="https://img.icons8.com/ios/100/ffffff/skateboard-truck.png" alt="Picture of trucks" />
+                </h3>
+            </div>
+            <div class="middle text-white">
+                <h3 class="shopnow-header">Trucks</h3>
+            </div>
+        </a>
+        <a href="{% url 'products' %}?category=wheels" class="col-6 col-sm-6 col-md-4 shopnow">
+            <div id="shopnow-inner">
+                <h3><img src="https://img.icons8.com/ios/80/ffffff/skateboard-wheel.png" alt="Picture of a wheel" />
+                </h3>
+            </div>
+            <div class="middle text-white">
+                <h3 class="shopnow-header">Wheels</h3>
+            </div>
+        </a>
+        <a href="{% url 'products' %}?category=bearings" class="col-6 col-sm-6 col-md-4 shopnow">
+            <div id="shopnow-inner">
+                <h3><img src="https://img.icons8.com/dotty/80/ffffff/final-state.png" alt="Picture of a bearing" /></h3>
+            </div>
+            <div class="middle text-white">
+                <h3 class="shopnow-header">Bearings</h3>
+            </div>
+        </a>
+        <a href="{% url 'products' %}?category=griptape" class="col-6 col-sm-6 col-md-4 shopnow">
+            <div id="shopnow-inner">
+                <h3><img src="https://img.icons8.com/ios-filled/100/ffffff/skateboard-grip-tape.png"
+                        alt="Picture of griptape" /></h3>
+            </div>
+            <div class="middle text-white">
+                <h3 class="shopnow-header">Griptape</h3>
+            </div>
+        </a>
+        <a href="{% url 'products' %}?category=misc" class="col-6 col-sm-6 col-md-4 shopnow">
+            <div id="shopnow-inner">
+                <h3><img src="https://img.icons8.com/ios/40/ffffff/screwdriver.png" alt="Picture of a screwdriver" />
+                    <img src="https://img.icons8.com/windows/40/ffffff/Production-order.png" class="d-none d-sm-inline"
+                        alt="Picture of a nut" />
+                    <br>
+                    <img src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/40/ffffff/external-screw-industry-kiranshastry-lineal-kiranshastry.png"
+                        class="d-none d-sm-inline" alt="Picture of a screw" />
+                    <img src="https://img.icons8.com/ios/40/ffffff/open-end-wrench.png" class="d-none d-sm-inline"
+                        alt="Picture of a wrench" />
+                </h3>
+            </div>
+            <div class="middle text-white">
+                <h3 class="shopnow-header">Misc</h3>
+            </div>
+        </a>
+    </div>
+</div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+<script src="{% static 'home/js/load_more.js' %}">
+</script>
 {% endblock %}
