--- a/products/static/products/css/product_detail.css
+++ b/products/static/products/css/product_detail.css
@@ -3,6 +3,15 @@
     margin-top: 10rem;
 }
 
+.image-container img {
+    width: 100%;
+    height: auto;
+}
+
+.review-container {
+    overflow-x: scroll;
+}
+
 .product-details-container h1 {
     font-weight: 700;
 }
