--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+		content="The SkateShop, Get the latest skateboarding gear right here!">
+	<meta name="keywords" content="skate, skateboard, sk8, truck, skater">
+	<meta name="author" content="Kristoffer Heiskanen">
     {% endblock %}
 
     {% block extra_meta %}
@@ -92,12 +96,12 @@
             <div class="col-12 col-lg-3 my-auto text-right search-container">
                 <ul class="list-inline list-unstyled my-0">
                     <li class="list-inline-item">
-                        <a class="nav-link" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true"
+                        <a class="nav-link" href="#" id="desktop-search" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">
                             SEARCH
                         </a>
                         <div class="container-fluid dropdown-menu dropdown-search border-0 w-100 p-3 my-0 mx-0"
-                            aria-labelledby="mobile-search">
+                            aria-labelledby="desktop-search">
                             <p class="text-center"><small>What are you looking for?</small></p>
                             <form method="GET" action="{% url 'products' %}">
                                 <div class="input-group w-50 mx-auto rounded-4">
@@ -116,11 +120,11 @@
                     </li>
                     <!-- DROPDOWN ACCOUNT  -->
                     <li class="list-inline-item dropdown dd-hover">
-                        <a class="nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
+                        <a class="nav-link" href="#" id="desktop-user-options" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">
                             ACCOUNT
                         </a>
-                        <div class="dropdown-menu border-0 dd-menu" aria-labelledby="user-options">
+                        <div class="dropdown-menu border-0 dd-menu" aria-labelledby="desktop-user-options">
                             {% if request.user.is_authenticated %}
                             {% if request.user.is_superuser %}
                             <a href="{% url 'add_product' %}" class="dropdown-item"><i class="far fa-clipboard"></i>
@@ -200,16 +204,16 @@
     <footer>
         <div class="row container-fluid footer-top mt-4 mx-0">
             <div class="col-12 col-lg-6 col-xl-5">
-                <h4 class="text-left uppercase">Subscribe for product news & discounts </h4>
+                <p class="sub-header text-left uppercase">Subscribe for product news & discounts </p>
             </div>
             <div class="col-12 col-lg-5 col-xl-5">
                 <!-- SUBSCRIBE FORM -->
                 <form action="{% url 'sub_form' %}" method="POST">
                     {% csrf_token %}
                     <div class="form-group subscribe py-2 w-100">
-                        <input type="email" class="form-control rounded-0" id="email_address" name="email_address"
+                        <input type="email" class="form-control rounded-0" id="email" name="email"
                             placeholder="Enter your e-mail">
-                        <button class="btn subscribe-button rounded-0" type="submit">
+                        <button class="btn subscribe-button rounded-0" type="submit" aria-label="Subscribe">
                             <p class="d-none d-sm-block uppercase">Subscribe</p> <i
                                 class="far fa-envelope d-sm-none"></i>
                         </button>
@@ -220,22 +224,21 @@
         <!-- SUPPORT / CONTACT -->
         <div class="row container-fluid footer-bottom mt-4 mx-0">
             <div class="col-12 col-md-4">
-                <h5 class="text-left uppercase">Customer Support</h5>
+                <p class="text-left uppercase support-header">Customer Support</p>
                 <a href="{% url 'contact' %}">Contact Us</a> <br>
-                <a href="">About</a><br>
                 {% if request.user.is_authenticated %}
                 <a href="{% url 'profile' %}">My Account</a> <br>
                 {% endif %}
 
             </div>
             <div class="col-12 col-md-4">
-                <h5 class="text-left uppercase">Contact Us</h5>
+                <p class="text-left uppercase support-header">Contact Us</p>
                 <p class="text-left">ADDRESS:<br><small>Something Street, Stockholm, Sweden</small></p>
                 <p class="text-left">PHONE:<br><small>(+48) 01234 567890</small></p>
                 <p class="text-left">HOURS:<br><small>Mon-Fri : 9.30am - 3.00pm</small></p>
             </div>
             <div class="col-12 col-md-4">
-                <h5 class="text-left uppercase">Visit us here</h5>
+                <p class="text-left uppercase support-header">Visit us here</p>
                 <ul>
                     <li><a href="https://github.com/Kagebounshin/Kagebounshin" target="_blank" rel="noopener"
                             aria-label="Link To GitHub">
@@ -262,7 +265,7 @@
             <hr>
             <div class="row mb-3">
                 <div class="col">
-                    <small class="text-muted">© <span class="copyright"></span> Kagebounshin. All Rights Reserved.
+                    <small>© <span class="copyright"></span> Kagebounshin. All Rights Reserved.
                     </small>
                 </div>
             </div>
