Minor changes, added so you dont have to see your bag items from all the messages.

--- a/bag/static/bag/css/bag.css
+++ b/bag/static/bag/css/bag.css
@@ -31,6 +31,7 @@
 }
 
 .update-link {
+    margin-top: .1rem;
     text-decoration: none;
 }
 
@@ -39,8 +40,7 @@ a.remove-item {
     right: 6px;
     top: 1px;
 }
-
-
+ 
 .grand-total {
     font-size: 1.5rem;
 }
