--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -98,7 +98,7 @@
                 <!-- GO TO CHECKOUT BUTTON -->
                 <a href="{% url 'checkout' %}" class="add-button btn btn-lm rounded-0 text-uppercase">
                     <span class="text-uppercase">Secure Checkout</span>
-                    <span class="icon">
+                    <span class="icon mb-1">
                         <i class="fas fa-lock"></i>
                     </span>
                 </a>
