--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -38,8 +38,8 @@
                 {% endfor %}
                 <div class="text-right">
                     <!-- EDIT BUTTON -->
-                    <a class="btn btn-md rounded-0" href="{% url 'products' %}">Cancel</a>
-                    <button class="btn rounded-0" type="submit">Update Product</button>
+                    <button class="btn rounded-0 account-secoundary-btn px-0" type="submit">Update Product</button>
+                    <a class="btn btn-md rounded-0 remove-button" href="{% url 'products' %}">Cancel</a>
                 </div>
             </form>
         </div>
