--- a/templates/base.html
+++ b/templates/base.html
@@ -204,7 +204,7 @@
     <footer>
         <div class="row container-fluid footer-top mt-4 mx-0">
             <div class="col-12 col-lg-6 col-xl-5">
-                <p class="sub-header text-left uppercase">Subscribe for product news & discounts </p>
+                <p class="sub-header text-left uppercase py-auto">Subscribe for product news & discounts </p>
             </div>
             <div class="col-12 col-lg-5 col-xl-5">
                 <!-- SUBSCRIBE FORM -->
