--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <!-- BAG ITEMS -->
-        {% if grand_total and not on_profile_page %}
+        {% if grand_total and not on_profile_page and not on_sub_page and not on_contact_page and not on_bag_page %}
             <p class="logo-font bg-white text-black py-1">Your Bag ({{ product_count }})</p>
             <div class="bag-notification-wrapper">
                 {% for item in bag_items %}
@@ -53,10 +53,7 @@
                     {% endif %}
                     <!-- CHECKOUT BUTTON -->
                     <a href="{% url 'view_bag' %}" class="add-button btn btn-sm rounded-4 mt-3">
-                        <span class="text-uppercase">Go To Secure Checkout</span>
-                        <span class="icon">
-                            <i class="fas fa-lock"></i>
-                        </span>
+                        <span class="text-uppercase">Go To Bag</span>
                     </a>
                 </div>
             </div>
