--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,7 +9,6 @@
 {% block content %}
 
 <!-- HERO SECTION -->
-
 <div class="container hero-container">
     <div class="row">
         <div class="col-12 col-md-8 offset-md-2 text-center">
@@ -18,7 +17,7 @@
             <p>
                 Get the latest skateboarding gear right here!
             </p>
-            <div class="my-5">
+            <div class="mt-5">
                 <h2>
                     <a href="{% url 'products' %}"
                         class="shop-now-button btn btn-md rounded-0 text-uppercase py-1 mb-5">Shop Now</a>
@@ -36,14 +35,18 @@
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img class="d-block" src="{{ MEDIA_URL }}unsplash01.jpg" alt="Second slide">
-            <div class="carousel-caption d-none d-md-block">
-
+            <div class="carousel-caption d-none d-lg-block">
+                <div class="dot1">
+                    <div class="dot-text rounded-4"><p class="mb-0">Flat tire? We got all kind of <a href="{% url 'products' %}?category=misc" class="uppercase">Wheels</a>! </p></div>
+                </div>
+                <div class="dot2">
+                    <div class="dot-text2 rounded-4"><p class="mb-0">Got a curb to wax? <br>Look under the <a href="{% url 'products' %}?category=misc" class="uppercase">Misc</a> category! </p></div>
+                </div>
             </div>
         </div>
         <div class="carousel-item">
             <img class="d-block" src="{{ MEDIA_URL }}unsplash02.jpg" alt="Second slide">
-            <div class="carousel-caption d-none d-md-block">
-
+            <div class="carousel-caption d-none d-lg-block">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -67,7 +70,7 @@
         <div class="row">
             {% for product in products %}
             {% if product.rating > 4.5 %}
-            <div class="col-12 col-sm-6 col-md-6 col-lg-3 rated-products">
+            <div class="col-6 col-sm-6 col-md-6 col-lg-3 rated-products">
                 <div class="card img-card h-100">
                     {% if product.image %}
                     <!-- IMAGES -->
@@ -114,7 +117,6 @@
         </div>
     </div>
 </div>
-
 <!-- SHOPNOW SECTION -->
 <div class="container shopnow-container mt-5 mb-5">
     <div class="row">
@@ -172,8 +174,8 @@
                 <h3><img src="https://img.icons8.com/ios/40/ffffff/screwdriver.png" alt="Picture of a screwdriver" />
                     <img src="https://img.icons8.com/windows/40/ffffff/Production-order.png" class="d-none d-sm-inline"
                         alt="Picture of a nut" />
-                    <br>
-                    <img src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/40/ffffff/external-screw-industry-kiranshastry-lineal-kiranshastry.png"
+                        <br>
+                        <img src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/40/ffffff/external-screw-industry-kiranshastry-lineal-kiranshastry.png"
                         class="d-none d-sm-inline" alt="Picture of a screw" />
                     <img src="https://img.icons8.com/ios/40/ffffff/open-end-wrench.png" class="d-none d-sm-inline"
                         alt="Picture of a wrench" />
@@ -189,6 +191,6 @@
 
 {% block postloadjs %}
 {{ block.super }}
-<script src="{% static 'home/js/load_more.js' %}">
-</script>
+<script src="{% static 'home/js/load_more.js' %}"></script>
+<script src="{% static 'home/js/dot_hover.js' %}"></script>
 {% endblock %}
