--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -37,7 +37,7 @@
                     <div class="col-12 d-flex justify-content-between">
                         <!-- CURRENT CATEGORY -->
                         {% if product.category %}
-                        <a class="text-black" href="{% url 'products' %}?category={{ product.category.name }}">
+                        <a class="text-black" href="" data-toggle="modal" data-target="#exampleModal">
                             {{ product.category.friendly_name }}
                         </a>
                         {% endif %}
