--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -109,9 +109,9 @@
             {% endif %}
             {% endfor %}
             <div class="text-center mb-5 mt-4">
-                <button id="btn_loadless" class="btn bt-sm rounded-0 uppercase"><i
+                <button id="btn_loadless" class="btn bt-sm rounded-0 uppercase" aria-label="loadless button"><i
                     class="fas fa-chevron-up"></i></button>
-                <button id="btn_loadmore" class="btn bt-sm rounded-0 uppercase"><i
+                <button id="btn_loadmore" class="btn bt-sm rounded-0 uppercase" aria-label="loadmore button"><i
                         class="fas fa-chevron-down"></i></button>
             </div>
         </div>
