--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -37,16 +37,16 @@
         </div>
     </div>
     <!-- PHONE NR / OPEN HOURS -->
-    <div class="row mt-5">
+    <div class="row mt-5 text-center">
         <div class="col-12 col-md-4 offset-md-2">
-            <h2 class="text-center"><i class="fas fa-phone"></i></h2>
-            <h2 class="text-center uppercase">Speak To Us</h2>
-            <p class="text-center">Dont have time to wait? Call us on: (+48) 01234 567890</p>
+            <i class="fas fa-phone mb-3"></i>
+            <h2 class="uppercase">Speak To Us</h2>
+            <p>Dont have time to wait? Call us on: (+48) 01234 567890</p>
         </div>
         <div class="col-12 col-md-4">
-            <h2 class="text-center"><i class="far fa-clock"></i></h2>
-            <h2 class="text-center uppercase">Opening Hours</h2>
-            <p class="text-center">Monday to Friday: 9.30am - 3.00pm</p>
+            <i class="far fa-clock mb-3"></i>
+            <h2 class="uppercase">Opening Hours</h2>
+            <p>Monday to Friday: 9.30am - 3.00pm</p>
         </div>
     </div>
     <!-- TEXT ONLY ON SM DEVICES -->
