--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -126,7 +126,7 @@
     </div>
     <div class="row bg-shopnow uppercase">
         <a href="{% url 'products' %}?category=decks" class="col-6 col-sm-6 col-md-4 shopnow">
-            <div id="shopnow-inner">
+            <div class="shopnow-inner">
                 <h3><img src="https://img.icons8.com/ios/100/ffffff/skateboard-without-wheels.png"
                         alt="Picture of a skate deck" /></h3>
             </div>
@@ -135,7 +135,7 @@
             </div>
         </a>
         <a href="{% url 'products' %}?category=trucks" class="col-6 col-sm-6 col-md-4 shopnow">
-            <div id="shopnow-inner">
+            <div class="shopnow-inner">
                 <h3><img src="https://img.icons8.com/ios/100/ffffff/skateboard-truck.png" alt="Picture of trucks" />
                 </h3>
             </div>
@@ -144,7 +144,7 @@
             </div>
         </a>
         <a href="{% url 'products' %}?category=wheels" class="col-6 col-sm-6 col-md-4 shopnow">
-            <div id="shopnow-inner">
+            <div class="shopnow-inner">
                 <h3><img src="https://img.icons8.com/ios/80/ffffff/skateboard-wheel.png" alt="Picture of a wheel" />
                 </h3>
             </div>
@@ -153,7 +153,7 @@
             </div>
         </a>
         <a href="{% url 'products' %}?category=bearings" class="col-6 col-sm-6 col-md-4 shopnow">
-            <div id="shopnow-inner">
+            <div class="shopnow-inner">
                 <h3><img src="https://img.icons8.com/dotty/80/ffffff/final-state.png" alt="Picture of a bearing" /></h3>
             </div>
             <div class="middle text-white">
@@ -161,7 +161,7 @@
             </div>
         </a>
         <a href="{% url 'products' %}?category=griptape" class="col-6 col-sm-6 col-md-4 shopnow">
-            <div id="shopnow-inner">
+            <div class="shopnow-inner">
                 <h3><img src="https://img.icons8.com/ios-filled/100/ffffff/skateboard-grip-tape.png"
                         alt="Picture of griptape" /></h3>
             </div>
@@ -170,7 +170,7 @@
             </div>
         </a>
         <a href="{% url 'products' %}?category=misc" class="col-6 col-sm-6 col-md-4 shopnow">
-            <div id="shopnow-inner">
+            <div class="shopnow-inner">
                 <h3><img src="https://img.icons8.com/ios/40/ffffff/screwdriver.png" alt="Picture of a screwdriver" />
                     <img src="https://img.icons8.com/windows/40/ffffff/Production-order.png" class="d-none d-sm-inline"
                         alt="Picture of a nut" />
