testing user stories

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -31,7 +31,7 @@
                     {{ field | as_crispy_field }}
                 {% endfor %}
                 <div class="text-center">
-                    <button class="add-button btn btn-md rounded-0 Uppercase " type="submit">Submit</button>
+                    <button class="add-button btn btn-md rounded-0 uppercase" type="submit">Send</button>
                 </div>
             </form>
         </div>
