--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -85,7 +85,7 @@
                         {% else %}
                         <div class="img-container">
                             <a href="{% url 'product_detail' product.id %}">
-                                <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png"
+                                <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.jpg.png"
                                     alt="{{ product.name }}">
                             </a>
                         </div>
