--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -154,6 +154,9 @@
                 <p><strong>{{ review.review_title }}</strong></p>
                 <small>By: <strong>{{ review.user }}</strong></small> <br>
                 <small>Review date: {{ review.date|date:"d-m-y" }}</small>
+                {% if request.user.is_superuser %}
+                <small class="ml-3"><a class="text-danger" href="{% url 'delete_review' review.id %}">Delete</a></small>
+                {% endif %}
             </div>
             <div class="col-12 col-md-6 review-container">
                 <p class="pt-4">{{ review.review }}</p>
